--- a/css/home/parceiros.css
+++ b/css/home/parceiros.css
@@ -13,7 +13,7 @@
   flex-wrap: wrap;
   margin: 0 5vw;
   margin-top: 72px;
-  padding-bottom: 124px;
+  /* padding-bottom: 124px; */
   justify-content: space-around;
   align-items: center;
 }
@@ -101,7 +101,7 @@
 }
 @media (max-width: 400px) {
   .parceiros {
-    padding-bottom: 80px;
+    padding-bottom: 0px;
   }
   .parceiros-conteudo {
     padding-bottom: 0px;
