--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 
 /* Unidades */
 @import "./unidades/unidades.css";
+@import "./unidades/sp.css";
 
 /* Cardápio */
 @import "./cardapio/item.css";
