--- a/css/utilitario/tipografia.css
+++ b/css/utilitario/tipografia.css
@@ -85,6 +85,10 @@
     font-size: 72px;
     line-height: 72px;
   }
+  .font-1-x {
+    font-size: 40px;
+    line-height: 40px;
+  }
   .font-2-xl-1 {
     font-size: 32px;
     line-height: 32px;
