--- a/css/unidades/sp.css
+++ b/css/unidades/sp.css
@@ -133,12 +133,20 @@
     height: 90px;
   }
 }
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
   .sp-2 {
-    box-shadow: inset 0px 29px var(--cor-c7), inset 0px 70px var(--cor-p0);
+    box-shadow: inset 0px 24px var(--cor-c7), inset 0px 60px var(--cor-p0);
   }
   .sp-2 > img {
-    height: 70px;
+    height: 60px;
+  }
+}
+@media (max-width: 800px) {
+  .sp-2 {
+    box-shadow: inset 0px 17px var(--cor-c7), inset 0px 40px var(--cor-p0);
+  }
+  .sp-2 > img {
+    height: 40px;
   }
   .sp-2 div {
     padding-top: 20px;
@@ -191,26 +199,27 @@
   background-color: var(--cor-c6);
   top: 20px;
 }
-.sp-3 li:first-child::before {
-  content: url("/img/icones/local.svg");
-  position: absolute;
-  left: -36px;
+.sp-3 img {
+  position: relative;
 }
-.sp-3 li:nth-child(2)::before {
-  content: url("/img/icones/email.svg");
+.sp-3 li img {
+  content: "";
   position: absolute;
   left: -36px;
-  top: 40px;
+  top: 10px;
 }
-.sp-3 li:last-child::before {
-  content: url("/img/icones/telefone.svg");
-  position: absolute;
+.sp-3 li:nth-child(2) img {
   left: -36px;
-  top: 40px;
+  top: 50px;
+}
+.sp-3 li:last-child img {
+  left: -36px;
+  top: 50px;
 }
 @media (max-width: 1200px) {
   .sp-3 {
     box-shadow: inset 0px 50px var(--cor-p0), inset 0px 90px var(--cor-c7);
+    padding-bottom: 60px;
   }
   .sp-3 > img {
     height: 90px;
@@ -223,23 +232,61 @@
     align-self: center;
     max-width: 35ch;
   }
-  .sp-3 li:first-child::before {
-    left: -36px;
+  .sp-3 li:first-child img {
     top: 4px;
   }
-  .sp-3 li:nth-child(2)::before {
-    left: -36px;
+  .sp-3 li:nth-child(2) img {
     top: 44px;
   }
-  .sp-3 li:last-child::before {
-    left: -36px;
+  .sp-3 li:last-child img {
     top: 44px;
   }
   .sp-3 iframe {
     width: 100%;
   }
 }
+@media (max-width: 1000px) {
+  .sp-3 {
+    box-shadow: inset 0px 32px var(--cor-p0), inset 0px 60px var(--cor-c7);
+  }
+  .sp-3 > img {
+    height: 60px;
+  }
+  .sp-3 li:first-child img {
+    left: -28px;
+    height: 20px;
+    top: 4px;
+  }
+  .sp-3 li:nth-child(2) img {
+    left: -28px;
+    height: 20px;
+    top: 44px;
+  }
+  .sp-3 li:last-child img {
+    left: -28px;
+    height: 20px;
+    top: 44px;
+  }
+  .sp-3 h1 {
+    padding-top: 40px;
+  }
+}
 @media (max-width: 800px) {
+  .sp-3 {
+    box-shadow: inset 0px 22px var(--cor-p0), inset 0px 40px var(--cor-c7);
+  }
+  .sp-3 > img {
+    height: 40px;
+  }
+  .sp-3 li:first-child img {
+    top: 8px;
+  }
+  .sp-3 li:nth-child(2) img {
+    top: 48px;
+  }
+  .sp-3 li:last-child img {
+    top: 48px;
+  }
   .sp-3 div {
     grid-template-columns: 1fr;
   }
@@ -249,5 +296,20 @@
   }
   .sp-3 li + li::after {
     width: 100%;
+  }
+}
+@media (max-width: 600px) {
+  .sp-3 h1 {
+    font-size: 44px;
+    line-height: 44px;
+  }
+  .sp-3 li:first-child img {
+    top: 4px;
+  }
+  .sp-3 li:nth-child(2) img {
+    top: 44px;
+  }
+  .sp-3 li:last-child img {
+    top: 44px;
   }
 }
