--- a/css/unidades/rj.css
+++ b/css/unidades/rj.css
@@ -1,298 +1,298 @@
-.sp-1 {
+.rj-1 {
   margin-top: 72px;
   padding-top: 80px;
   padding-bottom: 60px;
-  background-color: var(--cor-c7);
+  background-color: var(--cor-p0);
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0 100px;
 }
-.sp-1 img {
+.rj-1 img {
   height: 100%;
   object-fit: cover;
   object-position: right;
 }
-.sp-1 h1 {
+.rj-1 h1 {
   position: relative;
   display: grid;
 }
-.sp-1 h1::after {
+.rj-1 h1::after {
   content: "";
   position: absolute;
   width: 50%;
   height: 4px;
-  background-color: var(--cor-c6);
+  background-color: var(--cor-p1);
   bottom: -20px;
   justify-self: center;
 }
-.sp-1 p,
-.sp-1 span {
+.rj-1 p,
+.rj-1 span {
   padding-top: 60px;
 }
-.sp-1 div {
+.rj-1 div {
   display: grid;
   text-align: center;
-  padding-right: calc((100vw - 1200px) / 2);
+  padding-left: calc((100vw - 1200px) / 2);
   align-self: center;
 }
-.sp-1 div picture {
+.rj-1 div picture {
   display: none;
 }
 /*  */
-.sp-2 {
-  background-color: var(--cor-p0);
+.rj-2 {
+  background-color: var(--cor-c7);
   display: grid;
   padding-bottom: 60px;
-  box-shadow: inset 0px 56px var(--cor-c7), inset 0px 136px var(--cor-p0);
+  box-shadow: inset 0px 56px var(--cor-p0), inset 0px 136px var(--cor-c7);
 }
-.sp-2 > img {
+.rj-2 > img {
   justify-self: center;
 }
-.sp-2 div {
+.rj-2 div {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 40px;
   padding-top: 60px;
   align-items: center;
 }
-.sp-2 span {
+.rj-2 span {
   text-align: center;
   width: 11ch;
-  justify-self: right;
+  justify-self: left;
 }
-.sp-2 picture img {
+.rj-2 picture img {
   height: 100%;
   object-fit: cover;
   object-position: right;
 }
 /*  */
-.sp-3 {
-  background-color: var(--cor-c7);
-  box-shadow: inset 0px 77px var(--cor-p0), inset 0px 144px var(--cor-c7);
+.rj-3 {
+  background-color: var(--cor-p0);
+  box-shadow: inset 0px 77px var(--cor-c7), inset 0px 144px var(--cor-p0);
   display: grid;
   padding-bottom: 120px;
 }
-.sp-3 > img {
+.rj-3 > img {
   justify-self: center;
 }
-.sp-3 h1 {
+.rj-3 h1 {
   padding-top: 75px;
   justify-self: center;
   position: relative;
   display: grid;
 }
-.sp-3 h1::after {
+.rj-3 h1::after {
   content: "";
   position: absolute;
   width: 66%;
   height: 4px;
-  background-color: var(--cor-c6);
+  background-color: var(--cor-p1);
   bottom: -20px;
   justify-self: center;
 }
-.sp-3 div {
+.rj-3 div {
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding-top: 104px;
   gap: 40px;
   align-items: center;
 }
-.sp-3 li {
+.rj-3 li {
   position: relative;
   display: grid;
 }
-.sp-3 li + li {
+.rj-3 li + li {
   padding-top: 40px;
   position: relative;
 }
-.sp-3 li + li::after {
+.rj-3 li + li::after {
   position: absolute;
   content: "";
   width: 80%;
   height: 4px;
-  background-color: var(--cor-c6);
+  background-color: var(--cor-p1);
   top: 20px;
 }
-.sp-3 img {
+.rj-3 img {
   position: relative;
 }
-.sp-3 li img {
+.rj-3 li img {
   content: "";
   position: absolute;
   left: -36px;
   top: 10px;
 }
-.sp-3 li:nth-child(2) img {
+.rj-3 li:nth-child(2) img {
   left: -36px;
   top: 50px;
 }
-.sp-3 li:last-child img {
+.rj-3 li:last-child img {
   left: -36px;
   top: 50px;
 }
 /*  */
 @media (max-width: 1200px) {
-  .sp-1 {
+  .rj-1 {
     gap: 0 40px;
     margin-top: 36px;
   }
-  .sp-1 p,
-  .sp-1 span {
+  .rj-1 p,
+  .rj-1 span {
     padding-top: 40px;
   }
-  .sp-1 div {
-    padding-right: calc((100vw - 800px) / 2);
+  .rj-1 div {
+    padding-left: calc((100vw - 800px) / 2);
   }
   /*  */
-  .sp-2 {
-    box-shadow: inset 0px 37px var(--cor-c7), inset 0px 90px var(--cor-p0);
+  .rj-2 {
+    box-shadow: inset 0px 37px var(--cor-p0), inset 0px 90px var(--cor-c7);
   }
-  .sp-2 > img {
+  .rj-2 > img {
     height: 90px;
   }
   /*  */
-  .sp-3 {
-    box-shadow: inset 0px 50px var(--cor-p0), inset 0px 90px var(--cor-c7);
+  .rj-3 {
+    box-shadow: inset 0px 50px var(--cor-c7), inset 0px 90px var(--cor-p0);
     padding-bottom: 60px;
   }
-  .sp-3 > img {
+  .rj-3 > img {
     height: 90px;
   }
-  .sp-3 div {
+  .rj-3 div {
     padding-top: 60px;
   }
-  .sp-3 ul {
+  .rj-3 ul {
     display: grid;
     align-self: center;
     max-width: 35ch;
   }
-  .sp-3 li:first-child img {
+  .rj-3 li:first-child img {
     top: 4px;
   }
-  .sp-3 li:nth-child(2) img,
-  .sp-3 li:last-child img {
+  .rj-3 li:nth-child(2) img,
+  .rj-3 li:last-child img {
     top: 44px;
   }
-  .sp-3 iframe {
+  .rj-3 iframe {
     width: 100%;
   }
 }
 
 @media (max-width: 1000px) {
-  .sp-1 div {
+  .rj-1 div {
     padding-right: calc((100vw - 750px) / 2);
   }
   /*  */
-  .sp-2 {
-    box-shadow: inset 0px 24px var(--cor-c7), inset 0px 60px var(--cor-p0);
+  .rj-2 {
+    box-shadow: inset 0px 24px var(--cor-p0), inset 0px 60px var(--cor-c7);
   }
-  .sp-2 > img {
+  .rj-2 > img {
     height: 60px;
   }
   /*  */
-  .sp-3 {
-    box-shadow: inset 0px 32px var(--cor-p0), inset 0px 60px var(--cor-c7);
+  .rj-3 {
+    box-shadow: inset 0px 32px var(--cor-c7), inset 0px 60px var(--cor-p0);
   }
-  .sp-3 > img {
+  .rj-3 > img {
     height: 60px;
   }
-  .sp-3 li:first-child img {
+  .rj-3 li:first-child img {
     left: -28px;
     height: 20px;
     top: 4px;
   }
-  .sp-3 li:nth-child(2) img,
-  .sp-3 li:last-child img {
+  .rj-3 li:nth-child(2) img,
+  .rj-3 li:last-child img {
     left: -28px;
     height: 20px;
     top: 44px;
   }
-  .sp-3 h1 {
+  .rj-3 h1 {
     padding-top: 40px;
   }
 }
 @media (max-width: 800px) {
-  .sp-1 div {
-    padding-right: calc((100vw - 550px) / 2);
+  .rj-1 div {
+    padding-left: calc((100vw - 550px) / 2);
   }
   /*  */
-  .sp-2 {
-    box-shadow: inset 0px 17px var(--cor-c7), inset 0px 40px var(--cor-p0);
+  .rj-2 {
+    box-shadow: inset 0px 17px var(--cor-p0), inset 0px 40px var(--cor-c7);
   }
-  .sp-2 > img {
+  .rj-2 > img {
     height: 40px;
   }
-  .sp-2 div {
+  .rj-2 div {
     padding-top: 20px;
   }
   /*  */
-  .sp-3 {
-    box-shadow: inset 0px 22px var(--cor-p0), inset 0px 40px var(--cor-c7);
+  .rj-3 {
+    box-shadow: inset 0px 22px var(--cor-c7), inset 0px 40px var(--cor-p0);
   }
-  .sp-3 > img {
+  .rj-3 > img {
     height: 40px;
   }
-  .sp-3 li:first-child img {
+  .rj-3 li:first-child img {
     top: 8px;
   }
-  .sp-3 li:nth-child(2) img {
+  .rj-3 li:nth-child(2) img {
     top: 48px;
   }
-  .sp-3 li:last-child img {
+  .rj-3 li:last-child img {
     top: 48px;
   }
-  .sp-3 div {
+  .rj-3 div {
     grid-template-columns: 1fr;
   }
-  .sp-3 ul {
+  .rj-3 ul {
     justify-self: center;
     max-width: 50ch;
   }
-  .sp-3 li + li::after {
+  .rj-3 li + li::after {
     width: 100%;
   }
 }
 
 @media (max-width: 600px) {
-  .sp-1 {
+  .rj-1 {
     padding-top: 40px;
     padding-bottom: 40px;
     grid-template-columns: 1fr;
   }
-  .sp-1 picture {
+  .rj-1 picture {
     display: none;
   }
-  .sp-1 p {
+  .rj-1 p {
     padding-top: 40px;
   }
-  .sp-1 span {
+  .rj-1 span {
     padding-top: 20px;
   }
-  .sp-1 div {
+  .rj-1 div {
     padding-right: 50px;
     padding-left: 50px;
   }
-  .sp-1 div picture {
+  .rj-1 div picture {
     padding-top: 20px;
     display: block;
     height: 100%;
   }
-  .sp-1 div img {
+  .rj-1 div img {
     height: 140px;
     width: 100%;
   }
   /*  */
-  .sp-3 h1 {
+  .rj-3 h1 {
     font-size: 44px;
     line-height: 44px;
   }
-  .sp-3 li:first-child img {
+  .rj-3 li:first-child img {
     top: 4px;
   }
-  .sp-3 li:nth-child(2) img {
+  .rj-3 li:nth-child(2) img {
     top: 44px;
   }
-  .sp-3 li:last-child img {
+  .rj-3 li:last-child img {
     top: 44px;
   }
 }
